@@ -49,7 +49,7 @@
         !($details= XPClass::detailsForMethod($this->_details[0], $this->_details[1])) ||  
         !isset($details[DETAIL_ARGUMENTS][$this->_details[2]])
       ) {   // Unknown or unparseable, return ANYTYPE
-        return Type::$ANY;
+        return Type::$VAR;
       }
       return Type::forName(ltrim($details[DETAIL_ARGUMENTS][$this->_details[2]], '&'));
     }
